<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f1f1"
    android:padding="20dp"
    tools:context=".fragment.OTPFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_baseline_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/skip3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip_here"
        android:textColor="#515151"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/otp_sent"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enter_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/enter_the_4_dight_code"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome" />

    <LinearLayout
        android:id="@+id/otp_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_phone">
.
        <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:background="@drawable/phone_layout"
            android:gravity="center"
            android:hint="@string/_5"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/black"
            android:textColorHint="#7C7C7C"
            android:textSize="30sp"
            tools:ignore="Autofill,RelativeOverlap" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:background="@drawable/phone_layout"
            android:gravity="center"
            android:hint="@string/_5"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/black"
            android:textColorHint="#7C7C7C"
            android:textSize="30sp"
            tools:ignore="Autofill,RelativeOverlap" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:background="@drawable/phone_layout"
            android:gravity="center"
            android:hint="@string/_5"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/black"
            android:textColorHint="#7C7C7C"
            android:textSize="30sp"
            tools:ignore="Autofill,RelativeOverlap" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:background="@drawable/phone_layout"
            android:gravity="center"
            android:hint="@string/_5"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/black"
            android:textColorHint="#7C7C7C"
            android:textSize="30sp"
            tools:ignore="Autofill,RelativeOverlap" />


    </LinearLayout>

    <Button
        android:id="@+id/sign_button"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/black"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/otp_relative_layout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/i_dont_recive_code"
        android:textColor="#FF0000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_button" />

</androidx.constraintlayout.widget.ConstraintLayout>