<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_margin="10dp"
    android:background="@color/white"
    android:padding="10dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:elevation="5dp"
            app:cardCornerRadius="10dp">

            <ImageView
                android:id="@+id/service_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:src="@drawable/nurgun"
                android:contentDescription="@string/todo" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/cardView"
            android:background=" @color/white"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp">

            <TextView
                android:id="@+id/service_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/nurgun_moto"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/service_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/avtomobil_t_miri"
                android:textColor="@color/black" />

            <Button
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginTop="14dp"
                android:backgroundTint="@color/green"
                android:text="@string/call" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <RatingBar
                android:id="@+id/ratingBar"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:progressBackgroundTint="@color/black"
                android:progressTint="@color/yellow"
                android:secondaryProgressTint="@color/white"
                android:rating="2.7" />

        </RelativeLayout>

    </RelativeLayout>


</androidx.cardview.widget.CardView>